05/06/2017
https://github.com/bigdata-mx/factura-electronica